New about and blog pages added

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,14 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
     <h1>My Astro website</h1>
-    <h2>The Home page.</h2>
-    <p>Get some!</p>
+    <h2>About me and my new Astro website</h2>
+    <p>
+      I am working through Astro's introductory tutorial. This is the second
+      page on my website and it's the first one I built myself!
+    </p>
+    <p>
+      This site will update as I complete more of the tutorial, so keep checking
+      back and see how my journey is going!
+    </p>
   </body>
 </html>
