--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,14 +7,14 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro | Index</title>
+    <title>Astro | Blog</title>
   </head>
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
     <h1>My Astro website</h1>
-    <h2>The Home page.</h2>
-    <p>Get some!</p>
+    <h2>I'm de blog landing page</h2>
+    <p>But I'm not quite working properly yet.</p>
   </body>
 </html>
