--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,8 @@
 ---
+import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+
 const pageTitle = "My Astro learning Blog.";
 ---
 
@@ -11,9 +15,7 @@ const pageTitle = "My Astro learning Blog.";
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Navigation />
     <h1>{pageTitle}</h1>
     <h2>I'm de blog landing page</h2>
     <p>And here's a list of me blog posts:</p>
@@ -22,5 +24,6 @@ const pageTitle = "My Astro learning Blog.";
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
+    <Footer />
   </body>
 </html>
