A commit to push things along

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,7 +12,7 @@ const identity = {
   hobbies: ["swimming", "fishing", "walking", "eating"],
 };
 
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Books"];
 
 const happy = true;
 const finished = false;
