--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,23 @@
 ---
+import Social from "../components/Social.astro";
+
 const platform = "github";
 const username = "withastro";
 ---
 
 <footer>
   <p>
-    Learn more about my projects on <a
-      href={`https://www.${platform}.com/${username}`}>{platform}</a
-    >
+    Learn more about my projects on
+    <Social platform="Twitter" username="Jonnyp" />,
+    <Social platform="Facebook" username="joanOfArc" /> and
+    <Social platform="Instagram" username="jackyChan" />
   </p>
-  <style>
-    footer {
-      font-size: 2rem;
-      background-color: beige;
-      padding: 1em 0;
-      text-align: center;
-    }
-  </style>
 </footer>
+
+<style>
+  footer {
+    display: flex;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+</style>
