--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ const pageTitle = "Stuff about me and ting.";
 const identity = {
   firstName: "David",
   country: "United Kingdom",
-  occupation: "Gutter cleaner",
+  occupation: "Toast crisper",
   hobbies: ["swimming", "fishing", "walking", "eating"],
 };
 
